# LChat

./: Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
packaging/: PUBLISHING.md  generate_icon.py  io.github.DevMercenary.LChat.desktop  io.github.DevMercenary.LChat.metainfo.xml  io.github.DevMercenary.LChat.yaml
packaging/flathub/: cargo-sources.json  io.github.DevMercenary.LChat.yaml
packaging/screenshots/: README.md
src/: main.rs  net.rs
