[package]
name = "lchat"
version = "0.1.0"
edition = "2021"
description = "Локальный P2P-чат для обмена текстом и файлами по локальной сети (Fedora <-> Windows 11)"

[dependencies]
eframe = "0.35"
rfd = "0.17"
local-ip-address = "0.6"
snow = "0.10"
sha2 = "0.11"
socket2 = { version = "0.6", features = ["all"] }
image = "0.25"

[profile.release]
opt-level = 2
strip = true
